
2022-03-10  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (next_word_is_comment_paragraph_name): extracted from (ppinput)
	* pplex.l (get_word): new function to extract word and use in
	  (is_condition_directive_clause, next_word_is_comment_paragraph_name)
	* reserved.c, scanner.l, tree.h: renamed cb_memcpy_upper to
	  cb_memcpy_upper, as it does not follow strncpy rules
	* reserved.c (cb_strcasecmp) streamlined from glibc implementation
	* reserved.c, cobc.h: exported cb_strcasecmp
	* cobc.c, parser.y, ppparse.y, typeck.c: replaced locale-aware
	  strcasecmp with cb_strcasecmp where possible
	* cobc.c, codegen.c, field.c, help.c, parser.y, pplex.l, ppparse.y,
	  scanner.l, tree.c, cobc.h: cleanup of header inclusion (stdio.h,
	  string.h, strings.h)

2022-03-03  Simon Sobisch <simonsobisch@gnu.org>

	* ppparse.y (ppp_set_value): parse MicroFocus style $SET (numlit);
	  minor refactoring to remove local variables and not allocate
	  memory for invalid literals
	* ppparse.y (set_choice): output parsed literal instead of token
	* cobc.h, tree.h: moved flex directive actions and value types along
	  with cb_define_struct to tree.h as enum cb_directive_action and
	  enum cb_definition_type

2022-01-28  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_cond): attach source reference for all possible
	  kind of conditions

2022-02-06  Ron Norman <rjn@inglenet.com>

	* codegen.c: if verb changes then emit trace/debug code, too

2021-12-30  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (table_name): check for KEY phrase in SEARCH ALL
	* parser.y (end_perform_or_dot): fix terminator cleanup, previously freed the
	  wrong cb_tree
	* parser.y, scanner.l: distinguish between tokens END / AT_END,
	  ESCAPE / ON_ESCAPE, EXCEPTION / ON_EXCEPTION and
	  renamed tokens NOT_END -> NOT_AT_END, NOT_ON_EXCEPTION -> NOT_EXCEPTION,
	  NOT_OVERFLOW -> NOT_ON_OVERFLOW, NOT_ESCAPE -> NOT_ON_ESCAPE
	* codegen.c (output_search_all): add WHEN tracing, to keep performance only